feat(issues): apply issues